# evault

./: README.md  pyproject.toml  truffle-config.js
app/: interact.py  main.py
app/models/: __init__.py  case.py  file.py  user.py
app/routers/: cases.py  users.py
app/static/scripts/: auth.js  wallet.js
app/templates/: index.html
backend/: .gitignore  docker-compose.yml  driver.py  pyproject.toml
backend/app/: interact.py  main.py
backend/app/models/: case.py  file.py
backend/app/routers/: cases.py  files.py  users.py
backend/app/static/scripts/: wallet.js
backend/app/templates/: index.html
backend/app/utils/: checks.py
backend/contracts/: Case.sol  File.sol
backend/test/: interact.py
contracts/: Case.sol  File.sol  User.sol
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CasesTable.jsx  browseFilesBtn.jsx  createCaseBtn.jsx  goHome.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Signup.jsx
migrations/: 2_deploy_contract.js
